--- a/uchat-client/uchat-client.csproj
+++ b/uchat-client/uchat-client.csproj
@@ -17,6 +17,8 @@
       <PackageReference Include="Avalonia" Version="11.3.9" />
       <PackageReference Include="Avalonia.Desktop" Version="11.3.9" />
       <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
+      <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.9" />
+      <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.3.9" />
       <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="8.0.11" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
