--- a/uchat-client/uchat-client.csproj
+++ b/uchat-client/uchat-client.csproj
@@ -7,10 +7,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>uchat</AssemblyName>
+        <ApplicationManifest>app.manifest</ApplicationManifest>
+        <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\uchat-common\uchat-common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AvaloniaResource Include="Assets\**"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -19,6 +25,11 @@
       <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
       <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.9" />
       <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.3.9" />
+      <PackageReference Include="Avalonia.Diagnostics" Version="11.3.9">
+        <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
+        <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
+      </PackageReference>
+      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
       <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="8.0.11" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
